# EMStudio

./: .gitignore  CMakeLists.txt  Doxyfile  EMStudio.pro  README.md  appicon.rc  emstudio_coverage.pri  emstudio_sources.pri  icons.qrc  runDeploy.sh
.github/workflows/: build.yml
QtPropertyBrowser/: SciDoubleSpinBox.h  qteditorfactory.cpp  qteditorfactory.h  qtgroupboxpropertybrowser.cpp  qtpropertybrowser.cpp  qtpropertybrowser.h  qtpropertybrowserutils.cpp  qtpropertybrowserutils_p.h  qtpropertymanager.cpp  qtpropertymanager.h  qttreepropertybrowser.cpp  qtvariantproperty.cpp  qtvariantproperty.h
docker/: .dockerignore  Dockerfile  EMStudioApp.conf.docker  README.md  entrypoint.sh
docker/workspace/: .gmshrc
docker/workspace/.config/: QtProject.conf
docker/workspace/.config/EMStudio/: EMStudioApp.conf
extension/: fileedit.cpp  qlineeditd2.cpp  variantfactory.cpp  variantfactory.h  variantmanager.cpp  wslHelper.cpp  wslHelper.h
installer/: EMStudio.iss
keywords/: openems.csv  palace.csv
scripts/: KLayout.bat  KLayout.sh  build_target.bat  combine_extend_snp.py  elmer_model.py  klEmsDriver.py  klayout_show_gds.rb  openems_model.py  palace_model.py  run_palace  run_palace_and_postprocess  run_tests_local.bat  run_tests_local.sh
src/: about.cpp  about.h  about.ui  dielectric.cpp  dielectric.h  finddialog.cpp  finddialog.h  gdsreader.cpp  headless.cpp  keywordseditor.cpp  keywordseditor.h  layer.cpp  layer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  material.cpp  material.h  palacepythonparser.cpp  palacepythonparser.h  preferences.cpp  preferences.h  preferences.ui  pythonToEditor.cpp  pythonToStudio.cpp  pythoneditor.cpp  pythoneditor.h  pythonparser.cpp  pythonparser.h  pythonsyntaxhighlighter.cpp  pythonsyntaxhighlighter.h  runOpenEms.cpp  runPalace.cpp  substrate.cpp  substrate.h  substrateview.cpp  substrateview.h  tips.cpp  verification.cpp  (+4 more)
tests/: CMakeLists.txt  main.cpp  test_utils.cpp  test_utils.h  tests.pro  tst_about_dialog.cpp  tst_about_dialog.h  tst_find_dialog.cpp  tst_find_dialog.h  tst_headless_dispatch.cpp  tst_headless_dispatch.h  tst_keywords_editor_dialog.cpp  tst_keywords_editor_dialog.h  tst_mainwindow_ports.cpp  tst_mainwindow_ports.h  tst_openems_golden.cpp  tst_openems_golden.h  tst_palace_golden.cpp  tst_palace_golden.h  tst_preferences_dialog.cpp  tst_preferences_dialog.h  tst_python_editor.cpp  tst_python_editor.h  tst_wsl_helper.cpp  tst_wsl_helper.h
tests/golden/: tst_openems_golden.py  tst_palace_golden.py
tests/tools/: openems_python_stub.cmd  openems_run_stub.cmd  openems_run_stub.sh  palace_launcher_stub.sh
tools/: copy_assets.cmd  get_code_coverage.sh  version.sh
